Fix border modal top stripe buttons border radius on mobile

--- a/styl/modal.styl
+++ b/styl/modal.styl
@@ -149,3 +149,8 @@
   .modal
     width 100%
     border-radius 0
+
+    .modal-top-stripe
+
+      .back, .close
+        border-radius 0
